k8s-manifests/sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: sidekiq
  name: sidekiq
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sidekiq
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Program Files\Kompose\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/seller-bot-backend-default: "true"
        io.kompose.service: sidekiq
    spec:
      containers:
        - command:
            - ./entrypoints/sidekiq-entrypoint.sh
          image: losimonassi/seller_bot_backend:latest

          name: sidekiq
          resources: {}
      restartPolicy: Always
status: {}
