k8s-manifests/seller-bot-backend-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: seller-bot-backend-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/seller-bot-backend-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/seller-bot-backend-default: "true"
